// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart should take a snapshot 1`] = `
<DocumentFragment>
  <div
    class="cart-ico"
  >
    <span
      class="ant-badge"
    >
      <i
        class="las la-shopping-cart"
        data-testid="icon"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Cart should take snapshot with length 1`] = `
<DocumentFragment>
  <div
    class="cart-ico"
  >
    <span
      class="ant-badge"
    >
      <i
        class="las la-shopping-cart"
        data-testid="icon"
      />
      <sup
        class="ant-scroll-number ant-badge-count ant-badge-zoom-appear"
        data-show="true"
        title="1"
      >
        <span
          class="ant-scroll-number-only"
          style="transition: none; transform: translateY(-1100%);"
        >
          <p
            class="ant-scroll-number-only-unit"
          >
            0
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            1
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            2
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            3
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            4
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            5
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            6
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            7
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            8
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            9
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            0
          </p>
          <p
            class="ant-scroll-number-only-unit current"
          >
            1
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            2
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            3
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            4
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            5
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            6
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            7
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            8
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            9
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            0
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            1
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            2
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            3
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            4
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            5
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            6
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            7
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            8
          </p>
          <p
            class="ant-scroll-number-only-unit"
          >
            9
          </p>
        </span>
      </sup>
    </span>
  </div>
</DocumentFragment>
`;
